Change multiple constructors to a builder design pattern using @Builder annotation of lombok Added validation to insert/save in the database (I still need to add the constraints in the objects) And small changes/additions